# murmheretic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  flash.sh  release.sh
drivers/: HDMI.c  psram_allocator.c  psram_allocator.h  usbhid_wrapper.h
drivers/ps2kbd/: CMakeLists.txt  ps2kbd_mrmltr.cpp  ps2kbd_wrapper.cpp  ps2kbd_wrapper.h
drivers/ps2mouse/: CMakeLists.txt  ps2mouse.c  ps2mouse.h  ps2mouse_wrapper.c  ps2mouse_wrapper.h
drivers/usbhid/: hid_app.c  usbhid.h  usbhid_wrapper.c
src/: board_config.h  doomgeneric_rp2350.c  main.c  midifile.c  midifile.h
src/doomgeneric_fatfs/: m_misc_fatfs.c  stdio_fatfs.c  w_file_fatfs.c
src/heretic/: config.h  d_iwad.c  d_loop.c  d_main.c  d_main.h  doomfeatures.h  doomgeneric.h  doomkeys.h  doomstat.h  doomtype.h  g_game.c  i_glob.c  i_input.c  i_input.h  i_input_stubs.c  i_joystick.c  i_sound.c  i_sound.h  i_swap.h  i_timer.c  i_video.c  i_video.h  m_argv.c  m_config.c  m_misc.c  mn_menu.c  net_defs.h  net_gui.c  net_sdl.c  r_draw.c  r_local.h  r_main.c  r_plane.c  r_segs.c  r_things.c  s_sound.c  sb_bar.c  v_video.c
src/opl/: emu8950.c  opl_pico.c
src/pico/: i_oplmusic.c  i_picosound.c  i_picosound.h
